--- a/style.css
+++ b/style.css
@@ -2,11 +2,23 @@
  * Globals
  */
 
-img {
-  border: 5px solid #fff;
-  margin: 5px;
-  padding: 5px;
-  }
+/* Add white border + rounded corners (optional but looks nice) */
+.lead img {
+    border: 3px solid white;
+    border-radius: 6px;        /* optional: soft corners */
+    box-sizing: border-box;    /* ensures width=100 still includes border */
+}
+
+/* Add horizontal spacing between the images */
+.lead > div {
+    margin-right: 12px;        /* space between each image column */
+}
+
+.lead > div:last-child {
+    margin-right: 0;           /* remove margin from the last one */
+}
+
+
 
 /* Links */
 a,
